--- a/CarService-SPA/src/app/admin/sidebar/sidebar.component.html
+++ b/CarService-SPA/src/app/admin/sidebar/sidebar.component.html
@@ -25,8 +25,8 @@
                     <a [routerLink]="['/admin/services']">
                         <i class="fas fa-gear"></i>Services</a>
                 </li>
-                <li>
-                    <a href="calendar.html">
+                <li routerLinkActive="active">
+                    <a [routerLink]="['/admin/orders']">
                         <i class="fas fa-shopping-cart"></i>Orders</a>
                 </li>
                 <li>
