--- a/CarService-SPA/src/app/client/checkout/checkout.component.html
+++ b/CarService-SPA/src/app/client/checkout/checkout.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mb-5">
   <div class="py-5 text-center">
     <h2>Checkout</h2>
   </div>
@@ -29,14 +29,14 @@
         </li>
       </ul>
 
-      <form class="card p-2">
+      <!-- <form class="card p-2">
         <div class="input-group">
           <input type="text" class="form-control" placeholder="Promo code">
           <div class="input-group-append">
             <button type="submit" class="btn btn-secondary">Redeem</button>
           </div>
         </div>
-      </form>
+      </form> -->
     </div>
     <div class="col-md-8 order-md-1">
       <h4 class="mb-3">Billing address</h4>
@@ -99,7 +99,18 @@
           <input type="text" formControlName="addressOptional" class="form-control" id="address2"
             placeholder="Apartment or suite">
         </div>
+        <h4 class="mb-3">Payment</h4>
 
+        <div class="d-block my-3">
+          <div class="custom-control custom-radio">
+            <input id="paypal" name="paymentMethod" type="radio" class="custom-control-input">
+            <label class="custom-control-label" for="paypal">PayPal</label>
+          </div>
+          <div class="custom-control custom-radio">
+              <input id="after-delivery" name="paymentMethod" type="radio" class="custom-control-input">
+              <label class="custom-control-label" for="after-delivery">Pay After Delivery</label>
+            </div>
+        </div>
         <!-- <div class="row">
           <div class="col-md-5 mb-3">
             <label for="country">Country</label>
